--- a/CS_419M_Group_Project.ipynb
+++ b/CS_419M_Group_Project.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 2,
       "metadata": {
         "id": "C17whBaAjk2y"
       },
@@ -484,10 +484,10 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "accuracy :0.9990024123483213\n",
-            "precision :0.7731958762886598\n",
-            "recall: 0.6944444444444444\n",
-            "f1 score: 0.7317073170731706\n"
+            "accuracy :0.9990931021348376\n",
+            "precision :0.7169811320754716\n",
+            "recall: 0.7916666666666666\n",
+            "f1 score: 0.7524752475247525\n"
           ]
         }
       ],
@@ -527,10 +527,10 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "accuracy :0.9994014474089928\n",
-            "precision :0.9629629629629629\n",
-            "recall: 0.7222222222222222\n",
-            "f1 score: 0.8253968253968254\n"
+            "accuracy :0.9995284131101155\n",
+            "precision :0.9166666666666666\n",
+            "recall: 0.8020833333333334\n",
+            "f1 score: 0.8555555555555556\n"
           ]
         }
       ],
@@ -569,10 +569,10 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "accuracy :0.9991112400921408\n",
+            "accuracy :0.9993288955797798\n",
             "precision :0.927536231884058\n",
-            "recall: 0.5925925925925926\n",
-            "f1 score: 0.7231638418079096\n"
+            "recall: 0.6666666666666666\n",
+            "f1 score: 0.7757575757575758\n"
           ]
         }
       ],
@@ -588,7 +588,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
         "id": "yT06LUCh3DbH"
       },
@@ -619,10 +619,10 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "accuracy :0.9990386882629279\n",
-            "precision :0.9661016949152542\n",
-            "recall: 0.5277777777777778\n",
-            "f1 score: 0.6826347305389222\n"
+            "accuracy :0.9992019298786571\n",
+            "precision :0.8421052631578947\n",
+            "recall: 0.6666666666666666\n",
+            "f1 score: 0.744186046511628\n"
           ]
         }
       ],
@@ -639,6 +639,60 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### XGBoost"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 19,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[22:31:16] WARNING: C:/Users/Administrator/workspace/xgboost-win64_release_1.6.0/src/learner.cc:627: \n",
+            "Parameters: { \"params\" } might not be used.\n",
+            "\n",
+            "  This could be a false alarm, with some parameters getting used by language bindings but\n",
+            "  then being mistakenly passed down to XGBoost core, or some parameter actually being used\n",
+            "  but getting flagged wrongly here. Please open an issue if you find any such cases.\n",
+            "\n",
+            "\n",
+            "accuracy :0.9995828269820253\n",
+            "precision :0.9294117647058824\n",
+            "recall: 0.8229166666666666\n",
+            "f1 score: 0.87292817679558\n"
+          ]
+        }
+      ],
+      "source": [
+        "from xgboost import XGBClassifier\n",
+        "\n",
+        "xgb_model = XGBClassifier(params = {'learning_rate': 0.2,\n",
+        "          'max_depth': 2, \n",
+        "          'n_estimators':200,\n",
+        "          'subsample':0.9,\n",
+        "         'objective':'binary:logistic'})\n",
+        "xgb_model.fit(X_train, y_train)\n",
+        "\n",
+        "y_predicted_validation = xgb_model.predict(X_validation)\n",
+        "\n",
+        "print('accuracy :{}'.format(accuracy_score(y_validation, y_predicted_validation)))\n",
+        "print('precision :{}'.format(precision_score(y_validation, y_predicted_validation)))\n",
+        "print('recall: {}'.format(recall_score(y_validation, y_predicted_validation)))\n",
+        "print('f1 score: {}'.format(f1_score(y_validation, y_predicted_validation)))"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": []
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "hYPhQvnR-8X-"
       },
@@ -648,7 +702,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 20,
       "metadata": {
         "id": "sru9OgdJ6rsF"
       },
@@ -660,7 +714,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 21,
       "metadata": {
         "id": "gYWShWG97gui"
       },
@@ -671,7 +725,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 22,
       "metadata": {
         "id": "6jPlTUcq7xz8"
       },
@@ -682,7 +736,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 23,
       "metadata": {
         "id": "unpUvXmN8dRF"
       },
@@ -698,7 +752,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -711,10 +765,10 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "accuracy :0.9994558612809026\n",
-            "precision :0.8481012658227848\n",
-            "recall: 0.788235294117647\n",
-            "f1 score: 0.8170731707317074\n"
+            "accuracy :0.9990749641775343\n",
+            "precision :0.7289719626168224\n",
+            "recall: 0.78\n",
+            "f1 score: 0.7536231884057971\n"
           ]
         }
       ],
@@ -745,10 +799,10 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "accuracy :0.9994377233235993\n",
-            "precision :0.92\n",
-            "recall: 0.7340425531914894\n",
-            "f1 score: 0.8165680473372782\n"
+            "accuracy :0.9995102751528123\n",
+            "precision :0.9294117647058824\n",
+            "recall: 0.79\n",
+            "f1 score: 0.8540540540540541\n"
           ]
         }
       ],
@@ -779,10 +833,10 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "accuracy :0.9992563437505668\n",
-            "precision :0.9344262295081968\n",
-            "recall: 0.6063829787234043\n",
-            "f1 score: 0.7354838709677419\n"
+            "accuracy :0.9993651714943863\n",
+            "precision :0.9452054794520548\n",
+            "recall: 0.69\n",
+            "f1 score: 0.7976878612716762\n"
           ]
         }
       ],
@@ -799,7 +853,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 28,
       "metadata": {
         "id": "bufW1nHM_25a"
       },
@@ -809,16 +863,56 @@
           "output_type": "stream",
           "text": [
             "accuracy :0.9990386882629279\n",
-            "precision :0.847457627118644\n",
-            "recall: 0.5319148936170213\n",
-            "f1 score: 0.6535947712418301\n"
+            "precision :0.821917808219178\n",
+            "recall: 0.6\n",
+            "f1 score: 0.6936416184971099\n"
           ]
         }
       ],
       "source": [
         "logistic = LogisticRegression(C=0.01)\n",
-        "logistic_model = logistic.fit(X_train, y_train)\n",
+        "logistic_model = logistic.fit(X_bal_train, y_bal_train)\n",
         "y_bal_predicted_validation = logistic_model.predict(X_bal_validation)\n",
+        "\n",
+        "print('accuracy :{}'.format(accuracy_score(y_bal_validation, y_bal_predicted_validation)))\n",
+        "print('precision :{}'.format(precision_score(y_bal_validation, y_bal_predicted_validation)))\n",
+        "print('recall: {}'.format(recall_score(y_bal_validation, y_bal_predicted_validation)))\n",
+        "print('f1 score: {}'.format(f1_score(y_bal_validation, y_bal_predicted_validation)))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 30,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[22:38:05] WARNING: C:/Users/Administrator/workspace/xgboost-win64_release_1.6.0/src/learner.cc:627: \n",
+            "Parameters: { \"params\" } might not be used.\n",
+            "\n",
+            "  This could be a false alarm, with some parameters getting used by language bindings but\n",
+            "  then being mistakenly passed down to XGBoost core, or some parameter actually being used\n",
+            "  but getting flagged wrongly here. Please open an issue if you find any such cases.\n",
+            "\n",
+            "\n",
+            "accuracy :0.9995284131101155\n",
+            "precision :0.9404761904761905\n",
+            "recall: 0.79\n",
+            "f1 score: 0.858695652173913\n"
+          ]
+        }
+      ],
+      "source": [
+        "xgb_model = XGBClassifier(params = {'learning_rate': 0.2,\n",
+        "          'max_depth': 2, \n",
+        "          'n_estimators':200,\n",
+        "          'subsample':0.9,\n",
+        "         'objective':'binary:logistic'})\n",
+        "xgb_model.fit(X_bal_train, y_bal_train)\n",
+        "\n",
+        "y_bal_predicted_validation = xgb_model.predict(X_bal_validation)\n",
         "\n",
         "print('accuracy :{}'.format(accuracy_score(y_bal_validation, y_bal_predicted_validation)))\n",
         "print('precision :{}'.format(precision_score(y_bal_validation, y_bal_predicted_validation)))\n",
